tests/baselines/reference/parserPostfixUnaryExpression1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Expressions/parserPostfixUnaryExpression1.ts (4 errors) ====
    foo ++ ++;
           ~~
!!! error TS1005: ';' expected.
             ~
!!! error TS1109: Expression expected.
    ~~~
!!! error TS2304: Cannot find name 'foo'.
             
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.